syntax = "proto3";
package tm;

option go_package = "github.com/gnolang/gno/pkgs/bitarray/pb";

// messages
message BitArray {
	sint64 Bits = 1;
	repeated uint64 Elems = 2;
}